[package]
name = "jsonwebkey-cli"
version = "0.1.0"
authors = ["Okamura Yasunobu <okamura@informationsea.info>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonwebkey-convert = {version = "0.1", path = "../jsonwebkey-convert"}
clap = "2"
