[package]
name = "jsonwebkey-cli"
version = "0.1.2"
authors = ["Okamura Yasunobu <okamura@informationsea.info>"]
edition = "2018"
license = "Apache-2.0"
description = "Convert an RSA public key between Json Web Key and DER/PEM format."
readme = "README.md"
homepage = "https://github.com/informationsea/jsonwebkey-rs"
repository = "https://github.com/informationsea/jsonwebkey-rs"
keywords = ["jsonwebkey", "jsonwebtoken"]
categories = ["authentication"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonwebkey-convert = {version = "0.3", path = "../jsonwebkey-convert", features = ["pem_support"]}
clap = "2"
serde_json = "1"