[package]
name = "jsonwebkey-convert"
version = "0.3.0"
authors = ["Okamura Yasunobu <okamura@informationsea.info>"]
edition = "2018"
license = "Apache-2.0"
description = "Convert an RSA public key between Json Web Key and DER/PEM format."
readme = "README.md"
homepage = "https://github.com/informationsea/jsonwebkey-rs"
repository = "https://github.com/informationsea/jsonwebkey-rs"
keywords = ["jsonwebkey", "jsonwebtoken"]
categories = ["authentication"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pem = "0.8"
simple_asn1 = "0.4"
num-bigint = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64-url = "1"
lazy_static = "1"
anyhow = "1"
thiserror = "1"